@@ -21,6 +21,7 @@ Bugfixes
 Features
 --------
 
+* Add Afrikaans translation by Friedel Wolff
 * Support for docutils.conf (Issue #3188)
 
 New in v8.0.1
